--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: weather-service
+  name: weather
   labels:
     app: weather
 spec:
   type: NodePort
   ports:
-    - name: http
-      port: 4000
-      targetPort: 4000
+    - name: weather
+      port: 443
+      targetPort: 80
+      protocol: TCP
   selector:
     app: weather
